--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -15,16 +15,14 @@
         android:layout_height="match_parent"
         android:background="@color/black_1">
 
-        <TextView
+        <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/youngcha"
+            android:src="@drawable/ic_youngcha_logo"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginTop="40dp"
-            style="@style/TextSubtitle1"/>
-
+            android:layout_marginTop="50dp"/>
 
         <ImageView
             android:id="@+id/iv_refresh"
