--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -87,13 +87,37 @@
 
                 <ImageView
                     android:id="@+id/iv_youngchan"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="155dp"
+                    android:layout_height="155dp"
                     android:src="@drawable/image_youngchan_gray"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
                     android:layout_marginTop="104dp"/>
+                
+                <com.google.android.material.chip.Chip
+                    android:id="@+id/ch_youngchan_ment_01"
+                    android:layout_width="wrap_content"
+                    android:layout_height="32dp"
+                    app:layout_constraintTop_toTopOf="@id/iv_youngchan"
+                    app:layout_constraintRight_toRightOf="@id/iv_youngchan"
+                    android:layout_marginTop="24dp"
+                    android:layout_marginRight="121dp"
+                    style="@style/TextCaption1.Bold"
+                    android:textColor="@color/white_2"
+                    app:chipMinTouchTargetSize="0dp"/>
+
+                <com.google.android.material.chip.Chip
+                    android:id="@+id/ch_youngchan_ment_02"
+                    android:layout_width="wrap_content"
+                    android:layout_height="32dp"
+                    app:layout_constraintLeft_toLeftOf="@id/iv_youngchan"
+                    app:layout_constraintTop_toTopOf="@id/iv_youngchan"
+                    android:layout_marginTop="96dp"
+                    android:layout_marginLeft="109dp"
+                    style="@style/TextCaption1.Bold"
+                    android:textColor="@color/white_2"
+                    app:chipMinTouchTargetSize="0dp"/>
 
                 <TextView
                     android:layout_width="wrap_content"
