--- a/app/src/main/res/layout/fragment_add_stock_input.xml
+++ b/app/src/main/res/layout/fragment_add_stock_input.xml
@@ -181,9 +181,86 @@
 
                     </LinearLayout>
 
+                    <LinearLayout
+                        android:id="@+id/ll_oversea_option"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="80dp"
+                            android:text="@string/add_stock_overseas_option"
+                            style="@style/TextSubtitle2.Bold"/>
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="15dp"
+                            android:text="@string/add_stock_overseas_option_content"
+                            style="@style/TextCaption1"/>
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="40dp"
+                            android:orientation="horizontal"
+                            android:layout_marginTop="22dp">
+
+                            <TextView
+                                android:layout_width="56dp"
+                                android:layout_height="match_parent"
+                                android:gravity="center_vertical"
+                                android:text="@string/add_stock_overseas_option_adjust_exchange_rate"
+                                style="@style/TextCaption1"
+                                android:textColor="@color/white_3"/>
+
+                            <TextView
+                                android:id="@+id/tv_exchange_rate"
+                                android:layout_width="0dp"
+                                android:layout_height="match_parent"
+                                android:layout_weight="1"
+                                android:gravity="center_vertical"
+                                style="@style/TextBody1"
+                                android:textColor="@color/gray_40"/>
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="match_parent"
+                                android:gravity="center_vertical"
+                                android:text="@string/add_stock_overseas_option_adjust_exchange_rate_hana_back"
+                                style="@style/TextCaption1"
+                                android:textColor="@color/black_5"/>
+
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="40dp"
+                            android:orientation="horizontal"
+                            android:layout_marginTop="24dp">
+
+                            <TextView
+                                android:layout_width="56dp"
+                                android:layout_height="match_parent"
+                                android:gravity="center_vertical"
+                                android:text="@string/add_stock_overseas_option_purchase_price"
+                                style="@style/TextCaption1"
+                                android:textColor="@color/white_3"/>
+
+                            <com.depromeet.muyaho.widget.PriceEditText
+                                android:id="@+id/pet_overseas_purchase_price"
+                                android:layout_width="0dp"
+                                android:layout_height="40dp"
+                                android:layout_weight="1"/>
+
+                        </LinearLayout>
+
+                    </LinearLayout>
+
                     <View
                         android:layout_width="match_parent"
-                        android:layout_height="20dp"/>
+                        android:layout_height="40dp"/>
 
                 </LinearLayout>
 
