--- a/app/src/main/res/layout/fragment_mypage.xml
+++ b/app/src/main/res/layout/fragment_mypage.xml
@@ -51,7 +51,8 @@
             android:layout_marginBottom="20dp"
             android:background="@drawable/shape_bg_radius_8dp"
             android:gravity="center"
-            android:text="로그아웃"
+            android:onClick="@{() -> vm.onClickLogout()}"
+            android:text="@string/mypage_logout"
             android:textAppearance="@style/TextCaption1.Bold"
             android:textColor="@color/primary_blue"
             app:layout_constraintBottom_toTopOf="@id/tv_leave" />
@@ -61,8 +62,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="46dp"
-            android:text="회원탈퇴"
             android:onClick="@{() -> vm.onClickLeave()}"
+            android:text="회원탈퇴"
             android:textAppearance="@style/TextCaption1"
             android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
