--- a/app/src/main/res/layout/fragment_mypage.xml
+++ b/app/src/main/res/layout/fragment_mypage.xml
@@ -38,7 +38,8 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="50dp"
             android:layout_marginTop="130dp"
-            android:textAppearance="@style/TextH2"
+            android:text="@{vm.state.title}"
+            android:textAppearance="@style/TextH2.Light"
             android:textColor="@color/white"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -62,8 +63,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="46dp"
-            android:text="@string/mypage_leave"
             android:onClick="@{() -> vm.onClickLeave()}"
+            android:text="@string/mypage_leave"
             android:textAppearance="@style/TextCaption1"
             android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
